header nav completed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8"/>
+    <title>RUN BUDDY</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+</head>
+
+
 <!-- navigation -->
 <header>
   <h1>
-      <a href="#RUN BUDDY">RUN BUDDY</a>
+      <a href="/">RUN BUDDY</a>
     </h1>
   <nav>
       <!-- Unordered list element -->
@@ -21,14 +31,9 @@
               <a href="#reach-out">Reach Out</a>
           </li>
       </ul>
-
-
-
-
-
-
-    
+   
   </nav>
+
 </header>
 
 <!-- hero/jumbotron -->
