hero! added to the page.. will try the mobile input type(will check the keypad). Courtesy of html5

--- a/index.html
+++ b/index.html
@@ -36,6 +36,43 @@
 
 </header>
 
+<!-- Div element for the box-->
+<!-- hero section -->
+
+<section>
+  <div>
+    <h3>Get Started Today</h3>
+    <p>Fill out this form and one of our trainers will schedule a consult</p>
+    <!-- Add form element -->
+    <form>
+      <label for="name">Enter full name:</label>
+      <input type="text" placeholder="Your Name" name="name" id="name" />
+      <label for="email">Enter email address:</label>
+      <input type="email" placeholder="Your email" name="email" id="email" />
+      <label for="phone">Enter a telephone number</label>
+      <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+      <p>
+        Have you worked out with a trainder before?
+        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+        <label for="trainer-yes">Yes</label>
+        <input type="radio" name="trainer-confirm" id="trainer-no" />
+        <label for="trainer-no">No</label>
+      </p>
+      <p>
+        <label for="acknowledge-checked">
+          I acknowledge that i am at least 18 years of age
+        </label>
+        <input type="checkbox" name="acknowledge-checked" id="acknowledge-checked" />
+      </p>
+      <button type="submit">
+        Get running!
+      </button>
+    </form>
+  </div>
+</section>
+
+<!-- end hero -->
+
 <!-- hero/jumbotron -->
 <section>
 </section>
