--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
 
   <div>
     <!-- insert this img element -->
-    <img src="assets/images/step-2.svg"
-    <h3>Step 2: Consult With One Of Our Trainers</h3>
+    <img src="assets/images/step-2.svg" />
+    <h3>Step 2: <span>Consult With One Of Our Trainers.</span></h3>
     <p>Are you here to build muscle, lose weight, or just feel good?</p>
   </div>
 
   <div>
     <!-- insert this img element -->
-    <img src="assets/images/step-3.svg"
-    <h3>Step 3: Get Running.</h3>
+    <img src="assets/images/step-3.svg" />
+    <h3>Step 3: <span>Get Running.</span></h3>
     <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
   </div>
 
   <div>
     <!-- insert this img element -->
-    <img src="assets/images/step-4.svg"
-    <h3>Step 4: See Results.</h3>
+    <img src="assets/images/step-4.svg" >/
+    <h3>Step 4: <span>See Results.</span></h3>
     <p>Bi-weekly checkins with your trainer will keep you focused.</p>
   </div>
   
