all trainers bio completed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
-
-
 <!-- navigation -->
 <header>
   <h1>
@@ -31,9 +29,7 @@
               <a href="#reach-out">Reach Out</a>
           </li>
       </ul>
-   
   </nav>
-
 </header>
 
 <!-- Div element for the box-->
@@ -70,7 +66,6 @@
     </form>
   </div>
 </section>
-
 <!-- end hero -->
 
 <!-- hero/jumbotron -->
@@ -116,13 +111,53 @@
     <h3>Step 4: <span>See Results.</span></h3>
     <p>Bi-weekly checkins with your trainer will keep you focused.</p>
   </div>
-  
 </section>
 
 <!-- "meet the trainers" section -->
-<section>
-  <h2>Meet The Trainers</h2>
+<section id="your-trainers" class="trainers">
+  <h2 class="section-title primary-border">Meet The Trainers</h2>
+  <!-- first trainer bio -->
+  <article class="trainer">
+    <img src="./assets/images/trainer-1-updated.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+    <div class="trainer-bio text-left">
+      <h3>Arron Stephens</h3>
+      <h4>Speed / Strenght</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quos, at tempora ipsam explicabo expedita fugit 
+        maiores aliquid quasi eius voluptatum omnis magnam repellat quia vero quod perspiciatis maxime ratione.
+      </p>
+    </div>
+  </article>
+
+  <!-- first trainer bio -->
+  <article class="trainer">
+    <div class="trainer-bio text-right">
+      <h3>Joanna Gill</h3>
+      <h4>Endurance</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quos, at tempora ipsam explicabo expedita fugit 
+        maiores aliquid quasi eius voluptatum omnis magnam repellat quia vero quod perspiciatis maxime ratione.
+      </p>
+    </div>
+    <img src="./assets/images/trainer-2-updated.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+  </article>
+
+  <!-- third trainer bio -->
+<article class="trainer">
+  <img src="./assets/images/trainer-3-updated.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+  <div class="trainer-bio text-left">
+    <h3>Harry "the Headband" Smith</h3>
+    <h4>Strength</h4>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+    </p>
+  </div>
+</article>
+
+
+  
 </section>
+
+
 
 <!-- "reach out" section -->
 <section>
