--- a/index.html
+++ b/index.html
@@ -141,27 +141,49 @@
   </article>
 
   <!-- third trainer bio -->
-<article class="trainer">
-  <img src="./assets/images/trainer-3-updated.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio text-left">
-    <h3>Harry "the Headband" Smith</h3>
-    <h4>Strength</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-</article>
-
-
-  
+  <article class="trainer">
+    <img src="./assets/images/trainer-3-updated.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <div class="trainer-bio text-left">
+      <h3>Harry "the Headband" Smith</h3>
+      <h4>Strength</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
+  </article> 
 </section>
-
-
 
 <!-- "reach out" section -->
 <section>
   <h2>Reach Out</h2>
+  <div class="conatct-info"> 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.9119130387253!2d-79.28414588422166!3d43.69159465796471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4ce99792aa0dd%3A0x6b62d7eecfb64459!2s10%20Elward%20Blvd%2C%20Scarborough%2C%20ON%20M1L%203L2!5e0!3m2!1sen!2sca!4v1606618416380!5m2!1sen!2sca"
+            width="400" 
+            height="400" 
+            frameborder="0" 
+            style="border:0;" 
+            allowfullscreen="" 
+            aria-hidden="false" 
+            tabindex="0">
+    </iframe>
+
+    <div>
+      <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          EL <a href="mailto:info@runbuddy.io">info@funbuddy.io</a>
+        </address>
+    </div>
+
+  </div>
 </section>
 
 <!-- footer -->
