--- a/index.html
+++ b/index.html
@@ -155,12 +155,10 @@
 </section>
 
 <!-- "reach out" section -->
-<section>
-  <h2>Reach Out</h2>
-  <div class="conatct-info"> 
+<section id="reach-out" class="contact">
+  <h2 class="section-title secondary-border">Reach Out</h2>
+  <div class="contact-info"> 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.9119130387253!2d-79.28414588422166!3d43.69159465796471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4ce99792aa0dd%3A0x6b62d7eecfb64459!2s10%20Elward%20Blvd%2C%20Scarborough%2C%20ON%20M1L%203L2!5e0!3m2!1sen!2sca!4v1606618416380!5m2!1sen!2sca"
-            width="400" 
-            height="400" 
             frameborder="0" 
             style="border:0;" 
             allowfullscreen="" 
@@ -182,7 +180,6 @@
           EL <a href="mailto:info@runbuddy.io">info@funbuddy.io</a>
         </address>
     </div>
-
   </div>
 </section>
 
