Columns ifreame-text containter completedgit add -Agit add -A! - All DONE

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             aria-hidden="false" 
             tabindex="0">
     </iframe>
-
+    <!-- Div container for the "right side of the column -->
     <div>
       <h3>Run Buddy</h3>
         <p>
