--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- navigation -->
 <header>
   <h1>
-      <a href="/">RUN BUDDY</a>
+      <a href="./index.html">RUN BUDDY</a>
     </h1>
   <nav>
       <!-- Unordered list element -->
@@ -187,7 +187,7 @@
 <footer>
   <h2>❤️ Made with love by Run Buddy.</h2>
   <div>
-    <a href="#">Read Our Privacy Policy</a><br />
+    <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
     &copy; 2019 Run Buddy, Inc.
   </div>
 </footer>
