--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8"/>
-    <title>RUN BUDDY</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-
+  <meta charset="UTF-8"/>
+  <title>RUN BUDDY</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <!-- navigation -->
+<body>
 <header>
   <h1>
       <a href="./index.html">RUN BUDDY</a>
@@ -34,7 +34,6 @@
 
 <!-- Div element for the box-->
 <!-- hero section -->
-
 <section class="hero">
   <div class="hero-form">
     <h3>Get Started Today</h3>
@@ -67,10 +66,6 @@
   </div>
 </section>
 <!-- end hero -->
-
-<!-- hero/jumbotron -->
-<section>
-</section>
 
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
@@ -191,5 +186,7 @@
     &copy; 2019 Run Buddy, Inc.
   </div>
 </footer>
+</body>
+</html>
 
 
