--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
 </head>
 <!-- navigation -->
 <body>
-<header>
-  <h1>
-      <a href="./index.html">RUN BUDDY</a>
-    </h1>
-  <nav>
-      <!-- Unordered list element -->
-      <ul>
-          <!-- List item element-->
-          <li>
-              <!-- Anchor element-->
-              <a href="#what-we-do">What We Do</a>
-          </li>
-          <li>
-              <a href="#what-you-do">What You Do</a>
-          </li>
-          <li>
-              <a href="#your-trainers">Your Trainers</a>
-          </li>
-          <li>
-              <a href="#reach-out">Reach Out</a>
-          </li>
-      </ul>
-  </nav>
-</header>
-
+  <header>
+    <h1>
+        <a href="./index.html">RUN BUDDY</a>
+      </h1>
+    <nav>
+        <!-- Unordered list element -->
+        <ul>
+            <!-- List item element-->
+            <li>
+                <!-- Anchor element-->
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="#what-you-do">What You Do</a>
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach-out">Reach Out</a>
+            </li>
+        </ul>
+    </nav>
+  </header>
 <!-- Div element for the box-->
 <!-- hero section -->
 <section class="hero">
@@ -88,21 +87,21 @@
 
   <div>
     <!-- insert this img element -->
-    <img src="assets/images/step-2.svg" />
+    <img src="assets/images/step-2.svg" alt="" />
     <h3>Step 2: <span>Consult With One Of Our Trainers.</span></h3>
     <p>Are you here to build muscle, lose weight, or just feel good?</p>
   </div>
 
   <div>
     <!-- insert this img element -->
-    <img src="assets/images/step-3.svg" />
+    <img src="assets/images/step-3.svg" alt=""/>
     <h3>Step 3: <span>Get Running.</span></h3>
     <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
   </div>
 
   <div>
     <!-- insert this img element -->
-    <img src="assets/images/step-4.svg" >/
+    <img src="assets/images/step-4.svg" alt="">/
     <h3>Step 4: <span>See Results.</span></h3>
     <p>Bi-weekly checkins with your trainer will keep you focused.</p>
   </div>
@@ -122,7 +121,6 @@
       </p>
     </div>
   </article>
-
   <!-- first trainer bio -->
   <article class="trainer">
     <div class="trainer-bio text-right">
@@ -132,12 +130,14 @@
         maiores aliquid quasi eius voluptatum omnis magnam repellat quia vero quod perspiciatis maxime ratione.
       </p>
     </div>
-    <img src="./assets/images/trainer-2-updated.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+    <img src="./assets/images/trainer-2-updated.jpg" alt="Joanna Gill cooling off after a workout" title="Joanna Gill cooling off after a workout"/>
   </article>
+
+  
 
   <!-- third trainer bio -->
   <article class="trainer">
-    <img src="./assets/images/trainer-3-updated.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <img src="./assets/images/trainer-3-updated.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" title="Harry Smith wearing a headband and lifting comically small pink weights"/>
     <div class="trainer-bio text-left">
       <h3>Harry "the Headband" Smith</h3>
       <h4>Strength</h4>
