--- a/index.html
+++ b/index.html
@@ -170,6 +170,23 @@
             aria-hidden="false" 
             tabindex="0">
     </iframe>
+    <!--Contact us form -->
+    <div class="contact-form">
+      <h3>Contact Us</h3>
+      <form>
+        <label for="contact-name">Your Name</label>
+        <input type="text" id="contact-name" placeholder="Your name" />
+
+        <label for="contact-message">Message</label>
+        <textarea id="contact-message" placeholder="Message"></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
+
+    </div>
+    
+
+
     <!-- Div container for the "right side of the column -->
     <div>
       <h3>Run Buddy</h3>
