--- a/index.html
+++ b/index.html
@@ -78,15 +78,23 @@
 
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
-  <h2 class="section-title primary-border">What We Do</h2>
-  <p>
-    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-  </p>
+  <!-- Wrap every h2 with a class of "section-title" in this div! -->
+  <div class="flex-row">
+    <h2 class="section-title primary-border">What We Do</h2>
+  </div>
+  <div class="flex-row">
+    <p>
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+    </p>
+  /div>
 </section>
 
 <!-- "what you do" section -->
 <section id="what-you-do" class="steps">
-  <h2 class="section-title secondary-border">What You Do</h2>
+  <!-- Wrap every h2 with a class of "section-title" in this div! -->
+  <div class="flex-row">
+    <h2 class="section-title secondary-border">What You Do</h2>
+  </div>
 
   <div>
     <!-- insert this img element -->
@@ -119,7 +127,10 @@
 
 <!-- "meet the trainers" section -->
 <section id="your-trainers" class="trainers">
-  <h2 class="section-title primary-border">Meet The Trainers</h2>
+  <!-- Wrap every h2 with a class of "section-title" in this div! -->
+  <div class="flex-row">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+  </div>
   <!-- first trainer bio -->
   <article class="trainer">
     <img src="./assets/images/trainer-1-updated.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -161,7 +172,10 @@
 
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
-  <h2 class="section-title secondary-border">Reach Out</h2>
+  <!-- Wrap every h2 with a class of "section-title" in this div! -->
+  <div class="flex-row">
+    <h2 class="section-title secondary-border">Reach Out</h2>
+  </div>
   <div class="contact-info"> 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.9119130387253!2d-79.28414588422166!3d43.69159465796471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4ce99792aa0dd%3A0x6b62d7eecfb64459!2s10%20Elward%20Blvd%2C%20Scarborough%2C%20ON%20M1L%203L2!5e0!3m2!1sen!2sca!4v1606618416380!5m2!1sen!2sca"
             frameborder="0" 
