--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RUN BUDDY</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
