media queries completed for 575,768,980px px sizes

--- a/index.html
+++ b/index.html
@@ -214,16 +214,22 @@
     <!-- Div container for the "right side of the column -->
     <div>
       <h3>Run Buddy</h3>
+
+      <div>
         <p>
-          Any questions or concerns before signing up?
-          <br />
+          Any questions or concerns before signing up? 
+        <br>
           Let us know and we'll be happy to talk to you!
         </p>
+
+      </div>
+        
         <address>
-          55 Main Street <br />
-          Some Town, Ca <br />
-          P: 555.RUN.BUDZ (555.786.2839)<br/>
-          EL <a href="mailto:info@runbuddy.io">info@funbuddy.io</a>
+          55 Main Street <br/>
+          Some Town, Ca <br/>
+          12345<br/>
+          <br/>P: <a href="tel:555-786-2839">555.RUN.BUDZ (555.786.2839)</a><br/>
+          E: <a href="mailto:info@runbuddy.io">info@funbuddy.io</a>
         </address>
     </div>
     <!--Contact us form -->
