--- a/index.html
+++ b/index.html
@@ -204,6 +204,22 @@
   </div>
 </section>
 
+<!-- Grid container integration -->
+
+<section id="service-plans" class="services">
+  <a href="service-plans">service-plans</a>
+  <div class="service-grid-container">
+    <div class="service-grid-item">One</div>
+    <div class="service-grid-item">Two</div>
+    <div class="service-grid-item">Three</div>
+    <div class="service-grid-item">Four</div>
+    <div class="service-grid-item">Five</div>
+    <div class="service-grid-item">Six</div>
+  </div>
+
+
+</section>
+
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
   <!-- Wrap every h2 with a class of "section-title" in this div! -->
