--- a/index.html
+++ b/index.html
@@ -171,42 +171,58 @@
   <!-- first trainer bio -->
   <!-- Flex div -->
   <div class="trainers">
+   
     <article class="trainer">
-      <img src="./assets/images/trainer-1-updated.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-img trainer-1">
+        <div>
+          <h3>Arron Stephens</h3>
+          <h4>Speed / Strength</h4>
+        </div>
+      </div>
       <div class="trainer-bio">
-        <h3 class="trainer-name">Arron Stephens</h3>
-        <h4 class="trainer-role">Speed / Strenght</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quos, at tempora ipsam explicabo expedita fugit 
-          maiores aliquid quasi eius voluptatum omnis magnam repellat quia vero quod perspiciatis maxime ratione.
+        <!--re-add name and role here-->
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          123Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
-    <!-- first trainer bio -->
+    <!-- Second trainer bio -->
     <article class="trainer">
-      <img src="./assets/images/trainer-2-updated.jpg" alt="Joanna Gill cooling off after a workout" title="Joanna Gill cooling off after a workout"/>
+      <div class="trainer-img trainer-2">
+        <div>
+          <h3>Joanna Gill</h3>
+          <h4>Endurance</h4>
+        </div>
+      </div>
       <div class="trainer-bio">
-        <h3 class="trainer-name">Joanna Gill</h3>
-        <h4 class="trainer-role">Endurance</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quos, at tempora ipsam explicabo expedita fugit 
-          maiores aliquid quasi eius voluptatum omnis magnam repellat quia vero quod perspiciatis maxime ratione.
+        <!--re-add name and role here-->
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          123Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
-
     <!-- third trainer bio -->
     <article class="trainer">
-      <img src="./assets/images/trainer-3-updated.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" title="Harry Smith wearing a headband and lifting comically small pink weights"/>
+      <div class="trainer-img trainer-3">
+        <div>
+          <h3>Harry "the Headband" Smith</h3>
+          <h4>Strength</h4>
+        </div>
+      </div>
       <div class="trainer-bio">
-        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-        <h4 class="trainer-role">Strength</h4>
+        <!--re-add name and role here-->
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+          123Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
-    </article> 
+    </article>
   </div>
-</section>
 
 <!-- Grid container integration -->
 
